--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
 
     <string name="test_never_be_passed">Вы еще не проходили этот тест</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-8055006078061724/6343902695</string>
 </resources>
