added "questions" fragment with adapter replced fragment events

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,8 +60,10 @@
 
     <string name="title_test_results">Результаты</string>
     <string name="title_tests_list">Тесты</string>
+    <string name="title_question_categories">Вопросы</string>
 
     <string name="test_never_be_passed">Вы еще не проходили этот тест</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-8055006078061724/6343902695</string>
+    <string name="CD_category_img">category_img</string>
 </resources>
