Added new Concurrency test Added new Activity for creating questions. Need to do it later

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="feedback_leave">Оставить отзыв</string>
     <string name="feedback_text_hint">Напишите свой отзыв о работе приложения</string>
     <string name="clear_statistics">Очистить статистику</string>
+    <string name="navigation_menu_help_me">Помощь приложению</string>
 </resources>
